# stylometry

./: .gitignore  README.md
api/: main.py  pyproject.toml
backend/model/: pyproject.toml
backend/model/src/model/: __init__.py  data.py  inference.py  main.py  model.py  train.ipynb  training.py
backend/model/src/model/data/Hussein/: 03a803c5-80a6-4a5b-b9a2-767aa0294c2d.json  044914ec-93b0-4525-a258-feb1a1ea7926.json  0b869354-c3d7-4506-86c2-bdc8ea5d1cc9.json  0e96c733-c93a-4dbb-8dbb-4d93a632f83a.json  0ef05186-f944-4339-b6a7-103aeed46436.json  0fe12d66-5a6b-4b56-88cc-5cd09a12dcf8.json  0ff32004-0b72-4e05-9554-ec9456cc90d4.json  11e03785-cd08-4e8c-8c66-1f1803f13cde.json  19f4b3a7-a871-44d6-897e-2271d9fdf528.json  1af4a1af-c5e7-41cd-98e0-ad9e9625c733.json  28b6d816-f656-443b-a34f-9aaafdbe7172.json  2af91498-de84-4aef-9a4f-91e5f9f039b2.json  2d8b8627-4b4b-46fd-907b-dc11dea07537.json  3054fb43-aedf-4402-baae-87730dd04dfb.json  314169f5-7946-4f5d-95cb-af5a03d7ca08.json  3335b5d5-1c1b-46f0-b83c-2e281883a3ee.json  33cef9ea-341d-4d41-b3f3-2ff7c99a8c90.json  36baa129-df82-4c81-8df2-1ae548b8723b.json  376c7a69-7593-47c1-b2df-1faf6f7e23ac.json  387c0f78-c1f2-4474-9cfd-d4c36dd53097.json  3a579464-fab0-41fb-873b-5e391b546c9c.json  41ba2e9f-d02b-4a54-aa59-40c181444282.json  43f98d20-6ddb-442f-8a5c-f29114d70641.json  46e70cff-fc9d-4247-b212-fb91fedf1e97.json  4985dee8-8ca8-4725-92a1-f40e3bb92890.json  4b83f6fc-0974-457c-9aba-97f49ec2faec.json  4b8b0634-a1af-4b50-80fc-6ec9af0566e8.json  4bc9ab9f-4650-4d18-a3dd-9b647442ae08.json  (+72 more)
backend/model/src/model/saved/: keystroke_model.pth
(+112 files in other folders)
