[project]
name = "model"
version = "0.1.0"
description = "Model training and evaluation scripts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
]


[tool.uv.sources]
model = { workspace = true }
